--- a/l2arroawfunction.html
+++ b/l2arroawfunction.html
@@ -50,6 +50,8 @@
         }
 
         console.log(getnum());
+
+        //Default value 
         let getnumber = (num1=100,num2=200)=>{
             const result = num1+num2;
             return result;
