--- a/l3iteration.html
+++ b/l3iteration.html
@@ -166,22 +166,175 @@
     }));
     console.log(winners);
 
-    document.write("<h3></h3>");
-    const ages = [20,25,21,17,35,16,500,17,11,80,10,18,12,15,37];
+    // document.write("<h3></h3>");
+    // const ages = [20,25,21,17,35,16,500,17,11,80,10,18,12,15,37];
+    //
+    // const getover18 = ages.filter(age=>{
+    //     return age > 18;
+    // });
+    // console.log(getover18); // (7) [20, 25, 21, 35, 500, 80, 37]
+    // document.write("filter result = " + getover18 + "<br/>");
+    //
+    // const getover20 = ages.filter(age=> age >= 20);
+    // console.log(getover20); // (7) [20, 25, 21, 35, 500, 80, 37]
 
-    const getover18 = ages.filter(age=>{
-        return age > 18;
+    // reduce
+    // mainarrays.reduce(function(previousValue,currentValue,currentIndex,array){},initialvalue or additional value)
+
+    const amounts = [10,20,30];
+    const result = amounts.reduce((total,cur)=>{
+        total += cur;
+        return total;
+    },0);
+
+    console.log(result); // 60
+
+    const sumresult = amounts.reduce((total,cur)=>(total += cur),0).toFixed(2);
+    console.log(sumresult);  //60.00
+    console.log(typeof sumresult); //string
+
+    const numbers = [10,200,30,40,50,60,70,80,90,100,500,0];
+    const getresult = numbers.reduce((prev,curr)=>{
+        // Ex 1 = get max
+        // if(curr > prev){
+        //     return curr;
+        // }
+        // return prev;
+
+        if(curr < prev){
+            return curr;
+        }
+        return prev;
+
+    },0);
+    console.log(getresult);
+    // max      curr        return
+    // 10       10          10
+    // 10       200         200
+    // 200      30          200
+    // 200      40          200...
+    // 200      500         500
+    // 500      0           500
+
+    // includes()
+    const animals = ["cat","dog","owl","monkey",500,1000];
+    console.log(animals.includes('dog'));   // true
+    console.log(animals.includes('Dog'));   // false
+    console.log(animals.includes('do'));   // false
+    console.log(animals.includes('owl'));   // true
+    console.log(animals.includes(500));   // true
+    console.log(animals.includes("1000"));   // false
+
+    const articles = [
+        {
+            title:"this is new article 1",
+            author:"u ba",
+            rating:2.8,
+            type:["book","ebook","cd"]
+        },
+        {
+            title:"this is new article 2",
+            author:"u hla",
+            rating:4.3,
+            type:["book","cd"]
+        },
+        {
+            title:"this is new article 3",
+            author:"Daw Mya",
+            rating:4.5,
+            type:["book","ebook","cd"]
+        },
+        {
+            title:"this is new article 4",
+            author:"Daw pa",
+            rating:3.1,
+            type:["ebook","cd"]
+        }
+    ];
+
+    const goodratings = articles.filter(article=>article.rating > 4);
+    console.log(goodratings);
+
+    const getbooks = articles.filter(article=>{
+       const result = article.type.includes("book");
+       return result;
     });
-    console.log(getover18); // (7) [20, 25, 21, 35, 500, 80, 37]
-    document.write("filter result = " + getover18 + "<br/>");
 
-    const getover20 = ages.filter(age=> age >= 20);
-    console.log(getover20); // (7) [20, 25, 21, 35, 500, 80, 37]
+    console.log(getbooks);
+
+    // every() vs some() return boolean
+
+    const boys = ['aung aung','kyaw aung','zin maung','soe naung'];
+
+    const checklenght = boys.every(boy=>{
+        return boy.length === 9;
+    });
+
+    console.log(checklenght);   //true
+
+    let firstletterwitha = boys.every(boy=>boy[0] === 'a');
+    console.log(firstletterwitha);  // false
+
+    let lastletterwithg = boys.every(boy=>boy[boy.length-1] === 'g' );
+    console.log(lastletterwithg); // true
+
+    let fstletterwitha = boys.some(boy=>boy[0] === 'a' );
+    console.log(fstletterwitha);    // true
+
+    document.write("<h3>find() Method </h3>");
+
+    const users = [
+        {name:"aung aung",age:20},
+        {name:"kyaw kyaw",age:21},
+        {name:"tun tun",age:22},
+        {name:"zaw zaw",age:23},
+        {name:"lin lin",age:24},
+    ];
+
+    console.log(users);
 
 
+    const findresult = users.find(function(user){
+        return user.name === "zaw zaw";
+    });
+    console.log(findresult);
+
+    const filterresult = users.filter(function(user){
+        return user.name === "zaw zaw";
+    });
+    console.log(filterresult);
+
+    const filterbyage = users.filter(function(user){
+        return user.age > 22
+    });
+    console.log(filterresult);
+
+    const findbyage = users.find(function(user){
+        return user.age > 22;
+    });
+    console.log(findbyage);
+
+    const posts = [
+        {id:1,title:"New Post One"},
+        {id:2,title:"New Post Two"},
+        {id:3,title:"New Post Three"}
+    ];
+
+    const comment = {post_id:1,message:"nice post one",user_id:10}
+
+    function postcomment(posts,comment){
+        return posts.find(function(post){
+           return post.id === comment.post_id;
+        });
+    }
+
+    console.log(postcomment(posts,comment));
 
 </script>
 </body>
 </html>
 
 <!--26AA-->
+<!-- 28SM -->
+<!--0;s;1;P;c;5;u;000000FF;h;0;f;0;0l;4;0o;0;0a;1;0f;0;1b;0;S;c;5;s;0.7;o;1-->
+<!-- 3TH -->
