--- a/l6restparams.html
+++ b/l6restparams.html
@@ -47,7 +47,38 @@
     console.log(sumresult(10,20,30,40,50)); // 150
     console.log(sumresult([10,20,30,40,50])); // doesn't work with array 010,20,30,40,50
 
-    // continue....
+    function totalresult(...nums){
+        const total = nums.reduce((total,curr)=> total+curr,0);
+        return total;
+    }
+
+    console.log(totalresult(10,20,30,40,50));
+
+    function exampleone(num1,num2,num3){
+        console.log(num1,num2,num3);
+    }
+
+    exampleone(10,20,30,40,50); // 10 20 30
+
+    function exampletwo(num1,num2,...num3){
+        console.log(num1,num2,num3);
+    }
+
+    exampletwo(10,20,30);
+    exampletwo(10,20,30,40,50,60);
+
+    function getinfo(first,last,...city){
+        console.log("This is firstname",first);
+        console.log("This is lastname",last);
+        console.log("This is city",city);
+    }
+
+    // getinfo(); // this is firstname undefined this is lastname undefined this is city []
+    getinfo("aung","kyaw","yangon");
+
+    getinfo("aung","kyaw","yangon","myanmar","asia");
+
+
 
 </script>
 </body>
