--- a/l8argument.html
+++ b/l8argument.html
@@ -8,6 +8,64 @@
 
 <script type="text/javascript">
 
+    // Arguments Object
+    // Note : arguments Object can't setin arrow function
+
+    function getname(first,last){
+        console.log(first,last);
+    }
+
+    getname("aung","Kyaw");
+
+    function getfullname(first,last){
+        console.log(arguments);   // Arguments(2) ['aung', 'kyaw', callee: ƒ, Symbol(Symbol.iterator): ƒ]
+        console.log(typeof arguments);   // object
+        console.log(arguments[0]);   // aung
+        console.log(arguments[1]);   // kyaw
+    }
+
+    getfullname("aung","kyaw"); // aung kyaw
+
+    function getcountry(){
+        console.log(arguments);
+        console.log(arguments[0]);
+    }
+
+    getcountry(); // Arguments [callee: ƒ, Symbol(Symbol.iterator): ƒ]
+                  // undefined
+    
+    getcountry("Thailand");  // Arguments ['Thailand', callee: ƒ, Symbol(Symbol.iterator): ƒ]
+                             // Thailand
+
+    
+
+    // Error
+    // const getcity = ()=>{
+        // console.log(arguments);
+    // };
+    // getcity(); // Uncaught ReferenceError: arguments is not defined
+    // getcity("Indonesia"); // Uncaught ReferenceError: arguments is not defined
+
+    function getnumber(){
+        let result = 0;
+        for(const val of arguments ){
+            result += val;
+        }
+        return result;
+    }
+
+    console.log(getnumber(10,20,30,40,50)); // 150
+
+    function totalresult(){
+        let total = 0;
+        for(let x = 0; x < arguments.length; x++){
+            total += arguments[x]; 
+        }
+        return total;
+    }
+
+    console.log(totalresult(10,20,30,40,50)); // 150
+
     //Error
     // function sumresult(){
     //     let sum = arguments.reduce((total,curr)=>(total += curr),0);
@@ -21,7 +79,7 @@
         return sum;
     }
 
-    console.log(sumresult(10,20,30,40,50));
+    // console.log(sumresult(10,20,30,40,50));
 
 
 
