--- a/l3iteration.html
+++ b/l3iteration.html
@@ -192,7 +192,9 @@
     // console.log(getover20); // (7) [20, 25, 21, 35, 500, 80, 37]
 
     // reduce
-    // mainarrays.reduce(function(previousValue,currentValue,currentIndex,array){},initialvalue or additional value)
+    // mainarrays.reduce(function(previousValue,currentValue,currentIndex,array){
+    //
+    // },initialvalue or  additional value);
 
     const amounts = [10,20,30];
     const result = amounts.reduce((total,cur)=>{
